<?xml version="1.0" encoding="utf-8"?>
<!--
  - Copyright 2013 Google Inc.
  -
  - Licensed under the Apache License, Version 2.0 (the "License"); you may not
  - use this file except in compliance with the License. You may obtain a copy
  - of the License at
  -
  - http://www.apache.org/licenses/LICENSE-2.0
  -
  - Unless required by applicable law or agreed to in writing, software
  - distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  - WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  - License for the specific language governing permissions and limitations
  - under the License.
-->
<resources>

    <string name="app_name">MobiPubSub</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="subscribe">Subscribe</string>
    <string name="action_settings">Action Settings</string>
    <string name="hello_world">Hello World!</string>
<<<<<<< HEAD
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_profile">Profile</string>
=======
    <string name="publisher">Publisher</string>
    <string name="subscriber">Subscriber</string>

    <string-array name="topics_array">
        <item>Topic 1</item>
        <item>Topic 2</item>
        <item>Topic 3</item>
        <item>Topic 4</item>
    </string-array>

>>>>>>> 040df8fbcad589f5d7c3afd9fcab70c871b565cc

</resources>
